--- a/kit_web_ui/templates/base.html
+++ b/kit_web_ui/templates/base.html
@@ -54,6 +54,11 @@
         </div>
     </nav>
     <div class="container mt-3 mb-3">
+        {% if error %}
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
+        {% endif %}
         {% block content %}
         {% endblock %}
     </div>
