--- a/kit_web_ui/templates/base.html
+++ b/kit_web_ui/templates/base.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{% block title %}Robot UI{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" integrity="sha384-Ay26V7L8bsJTsX9Sxclnvsn+hkdiwRnrjZJXqKmkIDobPgIIWBOVguEcQQLDuhfN" crossorigin="anonymous">
     <link rel="icon" href="https://icons.getbootstrap.com/assets/icons/robot.svg" integrity="sha384-dGXV/q5tedeSk1GCZTrvmOxr1LahGiAH3jWy77VmBa+4mURnUqC0vOjKcBwrrIfo" crossorigin="anonymous" type="image/svg+xml">
+    <script src="{% static 'dark-mode.js' %}"></script>
     {% block extra_head %}
     {% endblock %}
 </head>
@@ -33,6 +35,9 @@
             {% block generated %}
             <span class="text-muted">Loaded: {{ now }} <a href="{{ request.path }}?{{ request.GET.urlencode }}" class="btn btn-outline-secondary"><i class="bi bi-arrow-repeat"></i></a></span>
             {% endblock %}
+            <button id="theme-toggle"class="btn btn-outline-secondary">
+                <i id="toggle-theme-icon" class="bi bi-circle-half"></i>
+            </button>
 
             <ul class="nav nav-pills">
                 {% with request.resolver_match.url_name as url_name %}
