--- a/kit_web_ui/templates/team_select.html
+++ b/kit_web_ui/templates/team_select.html
@@ -12,7 +12,7 @@
             <div class="card-body" style="text-align: center;">
                 <h5 class="card-title">{{ team.name }}</h5>
                 <p class="card-text">
-                    User: {{ team.user.username }} (Logged in: {{ team.user.last_login }})<br>
+                    User: {{ team.username }} (Logged in: {{ team.last_login }})<br>
                     Broker: {{ team.broker }}<br>
                 </p>
                 <div class="d-grid gap-2">
