--- a/kit_web_ui/templates/team_select.html
+++ b/kit_web_ui/templates/team_select.html
@@ -16,7 +16,7 @@
                     Broker: {{ team.broker }}<br>
                 </p>
                 <div class="d-grid gap-2">
-                    <a href="{% url 'load_ui' %}?team={{ team.user.username }}" class="btn btn-outline-primary stretched-link">Select</a>
+                    <a href="{% url 'load_ui' %}?team={{ team.username }}" class="btn btn-outline-primary stretched-link">Select</a>
                 </div>
             </div>
         </div>
