--- a/kit_web_ui/templates/team_select.html
+++ b/kit_web_ui/templates/team_select.html
@@ -10,7 +10,7 @@
 {% for team in teams %}
     <div class="col">
         <div class="card border-dark bg-light mb-3">
-            <div class="card-body" style="text-align: center;">
+            <div class="card-body position-relative" style="text-align: center;">
                 <h5 class="card-title">{{ team.name }}</h5>
                 <p class="card-text">
                     User: {{ team.username }} (Logged in: {{ team.last_login }})<br>
@@ -18,6 +18,11 @@
                 </p>
                 <div class="d-grid gap-2">
                     <a href="{% static 'ui/index.html' %}?user={{ team.username }}" class="btn btn-outline-primary stretched-link">Select</a>
+                </div>
+            </div>
+            <div class="card-footer position-relative">
+                <div class="d-grid gap-2">
+                    <a href="{% url 'runs' team.username %}" class="btn btn-outline-success stretched-link">View Logs</a>
                 </div>
             </div>
         </div>
