--- a/kit_web_ui/templates/run_summary.html
+++ b/kit_web_ui/templates/run_summary.html
@@ -10,6 +10,7 @@
     {% for day in days %}
         <th scope="col">{{day|date:"D d"}}</th>
     {% endfor %}
+        <th scope="col">Total</th>
     </tr>
 {% for name, run_data in runs_by_day.items %}
     <tr>
